welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:26: error: not found: type color
def faireMotif(c:color){
                 ^